include/dss_capi.h

    DSS_CAPI_DLL void DSS_NewCircuit(const char* Value);
    /*! 
    Array of magnitudes (doubles) of voltages at all buses
    */
    DSS_CAPI_DLL void Circuit_Get_AllBusVmag(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void DSS_ClearAll(void);
    /*! 
    Runs potential initialization of internal structures of the DSS engine.
    
    For DSS-Extensions, users are required to call this function at least
    once per process, especially in multi-threaded applications.

    Returns 0/false on failure. A failure might indicate an incompatibility between
    the Pascal threading system and the host process.
    */
    DSS_CAPI_DLL uint16_t DSS_Start(int32_t code);
    /*! 
    Description of error for last operation
    */
    DSS_CAPI_DLL char* Error_Get_Description(void);
    /*! 
    Error Number (returns current value and then resets to zero)
    */
    DSS_CAPI_DLL int32_t Error_Get_Number(void);
    /*! 
    Set Hour for time series solutions.
    */
    DSS_CAPI_DLL int32_t Solution_Get_Hour(void);
    /*! 
    Get present solution mode
    */
    DSS_CAPI_DLL int32_t Solution_Get_Mode(void);
    /*! 
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL int32_t Solution_Get_Number(void);
    /*! 
    Time step size in sec
    */
    DSS_CAPI_DLL double Solution_Get_StepSize(void);
    /*! 
    Set present solution mode
    */
    DSS_CAPI_DLL void Solution_Set_Mode(int32_t Mode);
    /*! 
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL void Solution_Set_Number(int32_t Value);
    /*! 
    Time step size in sec
    */
    DSS_CAPI_DLL void Solution_Set_StepSize(double Value);
    DSS_CAPI_DLL void Solution_Solve(void);
    /*! 
    ID (text) of the present solution mode
    */
    DSS_CAPI_DLL char* Solution_Get_ModeID(void);
    /*! 
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL int32_t Solution_Get_LoadModel(void);
    /*! 
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL void Solution_Set_LoadModel(int32_t Value);
    /*! 
    Flag to indicate whether the circuit solution converged
    */
    DSS_CAPI_DLL uint16_t Solution_Get_Converged(void);
    /*! 
    Input command string for the DSS.
    */
    DSS_CAPI_DLL void Text_Set_Command(const char* Value);